<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SayacBakimClientActivity!</string>
    <string name="app_name">ASOS ANDROID VERSION 1.0.9</string>
    <string name="filterActivity_name">Gerekli filtrelemeleri gerçekleştiriniz.</string>
    <string name="editOrderActivity_name">Saha Kullanıcı Görev Düzenle</string>
    <string name="metersync_name">Sorgulama Sonucu</string>
    <string name="foto_Esleme">Fotoğraf Eşleme</string>
    <string name="listactivity_name">Saha Kullanıcı Görev Listesi</string>
    <string name="description_histroy">İş Emri Açıklama Geçmişi</string>
    <string name="meterDirectionActivity_name">Yol Tarifi</string>
    <string name="updateApp">Uygulama Güncelle</string>
    <string name="Enter">Giriş</string>
    <string name="lblUserName">Kullanıcı Adı</string>
    <string name="lblMapX">X : </string>
    <string name="lblMapY">Y :</string>
    <string name="lblPassword">Şifre</string>
    <string name="main_no_items">Gösterilecek öğe bulunamadı.</string>
    <string name="lblCity">Şehir :</string>
    <string name="lblTown">Semt :</string>
    <string name="empty"></string>
    <string name="lblMeterModel"  >Sayaç Tipi:</string>
    <string name="lblSerialNumber">Sayaç Serino :</string>
    <string name="lblPanelNo"    >Pano  No        :</string>
    <string name="lblModemNumber">Modem No     :</string>
    <string name="lblTrafoSayaci">Trafo Sayacı  :</string>
    <string name="lblSokakSayaci">Sokak Sayacı :</string>
    <string name="lblTrafoCode">Trafo Kodu :</string>
    <string name="lblTesisaNo">Tesisat No :</string>
    <string name="lblCarpan">Carpan :</string>
    <string name="lblOldSeriNo">Eski Seri No :</string>
    <string name="lblMultiplier">Sayaç Çarpanı :</string>
    <string name="lblStatus">İş Emri Durumu:</string>
    <string name="lblLokasyon">Lokasyon :</string>
    <string name="lblBuildingName">Bina Adı :</string>
    <string name="lblBuildingCode">Trafo Kodu :</string>
    <string name="lblLocality">Mahalle :</string>
    <string name="lblWay">Adres Detayı :</string>
    <string name="lblWorkType">İş Tipi :</string>
    <string name="lblUser">Atanan Kişi :</string>
    <string name="lblGo">Git</string>
    <string name="lblExplaination">Açıklama  :</string>
    <string name="lblBack">Geri</string>
    <string name="lblSave">Kaydet</string>
    <string name="lblSearch">Sorgula</string>
    <string name="lblSubscriberNumber">Tesisat No-Trafo No:</string>
    <string name="lblModemGsmNo">Modem Gsm No :</string>
    <string name="lblElecCutIntrvl">Elek.Kesintisi :</string>
    <string name="lblMeterSyncInfo">Sayaç/Modem sistem tarafından algılanana kadar bekleyiniz.5 dakika içerisinde eşleme sağlanamazsa sistem yöneticinizi arayınız.</string>
    <string name="btnDeupdateApp">Tamam</string>
    <string name="btnupdateApp">Uygulamayı Güncelle</string>
    <string name="AboneNo">Abone No :</string>
    <string name="Cancel">İptal </string>
    <string name="tarih">Tarih</string>
    <string name="ok">Tamam</string>
    <string name="chkUnique">Tek</string>
    <string name="menu_network">Modem Birleştirme Komutu</string>
    <string name="menu_work">İş Emirleri</string>
    <string name="menu_pano">Pano İş Emri</string>
    <string name="menu_setting">Ayarlar</string>
    <string name="menu_yardim">Yardım</string>
    <string name="menu_guncelle">Güncelle</string>
    <string name="menu_loadfoto">Fotoğraf Yükle</string>
	<string name="value">Kullanılan Miktar :</string>
	<string name="description">Açıklama :</string>
    <string name="lblm1">KLEMENS (2,5 mm2)(Adet)</string>
    <string name="lblm2">KLEMENS (10 mm2)(Adet)</string>
    <string name="lblm3">32 AMPER W-OTOMAT(Adet)</string>
    <string name="lblm4">50 AMPER W-OTOMAT(Adet)</string>
    <string name="lblm5">63 AMPER W-OTOMAT(Adet)</string>
    <string name="lblm6">1x10 mm2 Kablo(Metre)</string>
    <string name="lblm7">1X16 mm2 Kablo(Metre)</string>
    <string name="lblm8">4x2,5 mm2 TTR Kablo(Metre)</string>
    <string name="lblm9">4x10 mm2 NYY Kablo(Metre)</string>
    <string name="lblm10">4x16 mm2 NYY Kablo(Metre)</string>
    <string name="lblm11">3x25+16 mm2 NYY Kablo(Metre)</string>
    <string name="lblm12">16 mm2 pabuç(Adet)</string>
    <string name="lblm13">2,5mm2 yüksük(Adet)</string>
    <string name="lblm14">16mm2 yüksük(Adet)</string>
    <string name="lblm15">25mm2 K.Pabucu(Adet)</string>
    <string name="lblm16">6 mm2 Ek Muf(Adet)</string>
    <string name="lblm17">10 mm2 Ek Muf(Adet)</string>
    <string name="lblm18">16 mm2 Ek Muf(Adet)</string>
    <string name="lblm19">25 mm2 Ek Muf(Adet)</string>
    <string name="lblm20">Isı Büzüşmeli Makaron-16 mm(Metre)</string>
    <string name="lblm21">Isı Büzüşmeli Makaron-25 mm(Metre)</string>
    <string name="lblm22">Isı Büzüşmeli Makaron-35 mm(Metre)</string>
    <string name="lblm23">Akım trafosu(Adet)</string>
    <string name="lblm24">Eriyen bant(Adet)</string>
    <string name="lblm25">İzole bant(Adet)</string>
    <string name="lblm26">Çelik Spiral(Metre)</string>
    <string name="lblm27">Daldırma Galvanizli Köşebent(Metre)</string>
    <string name="lblm28">Çelik Kroşe (P KLİPS)(Adet)</string>
    <string name="lblm29">M8 Seti	(Adet)</string>
    <string name="lblm30">J Kanca</string>
    <string name="lblm31">Beton Direk Tespit Aparat Seti(Adet)</string>
    <string name="lblm32">30mm Paslanmaz çelik Tie-Wrap(Adet)</string>
    <string name="lblm33">45mm Paslanmaz çelik Tie-Wrap(Adet)</string>
    <string name="lblm34">45mm Plastik Tie-Wrap(Adet)</string>
    <string name="lblm35">6,3X32 MUV TRAPEZ EPDM PULLU(Adet)</string>
    <string name="lblm36">PLASTİK DÜBEL 10 mm(Adet)</string>
    <string name="lblm37">5 X 50 sunta vidası beyaz(Adet)</string>
    <string name="lblm38">5/16" ince pul beyaz(Adet)</string>
    
</resources>