<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/customborder"
    android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yesilnokta" />

 <LinearLayout
     android:id="@+id/linearLayout10"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:orientation="vertical" >

     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSerialNumber"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblSerialId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Serial Number"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMeterModel"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblMeterModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Meter Model"
                        android:textColor="@color/black" />
         
            </LinearLayout>

             <LinearLayout
                 android:id="@+id/linearLayout10"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblStatus"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Planlandı"
                    android:textColor="@color/black" />
            </LinearLayout>
 </LinearLayout>

  <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

 <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >





                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblCity"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="sehir"
                        android:textColor="@color/black"
                        android:textSize="14dp" />
                </LinearLayout>
            

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >






                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblTown"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblTown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Semt"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/lblSubscriberNumber"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblSubscriberNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="İş Emri No"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>
			 <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/lblElecCutIntrvl"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblElecCutIntrvl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Elek. Kesintisi"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
            </LinearLayout>
           
        </LinearLayout>
 

</LinearLayout>