<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@drawable/customborder2"
        android:orientation="horizontal" >

  <ImageView
        android:id="@+id/imageView2"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:src="@drawable/yesilnokta" />

    <TextView
        android:id="@+id/nbryesil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=": 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:src="@drawable/mavinokta" />

    <TextView
        android:id="@+id/nbrmavi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=": 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:src="@drawable/sarinokta" />

    <TextView
        android:id="@+id/nbrsari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=": 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:src="@drawable/turuncunokta" />

    <TextView
        android:id="@+id/nbrturuncu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=": 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:src="@drawable/siyahnokta" />

    <TextView
        android:id="@+id/nbrSiyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=": 0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />
        
        <TextView
            android:id="@+id/lblMapX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.31"
            android:layout_marginLeft="5dp"
            android:text="@string/lblMapX"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/lblMapY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.32"
            android:text="@string/lblMapY"
            android:textColor="@color/black" />
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/main_no_items" />

</LinearLayout>
